--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
     "socket.io": "^2.3.0",
